Changelog
=========

3.0b8 - Unreleased
------------------

- Fixed the language selector to work directly on the root in a virtual hosting
  environment. This closes http://plone.org/products/linguaplone/issues/216.
  [hannosch]

- Expanded the development buildout to include a simple Nginx configuration to
  make it easier to test virtual hosting issues.
  [hannosch]

- Changed the language selector to use the canonical_object_url instead of the
  view_url. We preserve the /view postfix ourselves, so using view_url would
  duplicate this in certain situations. We also stopped doing the default page
  analysis ourselves and use the given feature from the context state view.
  [hannosch]

3.0b7 - 2009-10-21
------------------

- Protect the LanguageIndependentFields adapter against weird fields, like
  computed fields.
  [hannosch]

3.0b6 - 2009-10-20
------------------

- Avoid preserving the mysterious `-C` in the language selector.
  [hannosch]

- Made sure that subclasses of fields listed in I18NAWARE_REFERENCE_FIELDS
  also get the special reference handling. Otherwise schemaextender fields
  won't get the behavior.
  [hannosch]

- Let the `generatedMutatorWrapper` work directly on schemaextender fields.
  [hannosch]

- Replaced `has_key` with `in` checks using the `__contains__` protocol.
  [hannosch]

- Factored out generated methods from the language independent ClassGenerator
  into module scope functions to allow outside access to them.
  [hannosch]

3.0b5 - 2009-10-14
------------------

- Optimized the getTranslations method by allowing the calling functions to
  pass in a hint about the canonical status of self. Often this is known by
  the caller and doesn't have to be determined inside the getTranslations call.
  Also optimized getNonCanonicalTranslations by extending the API of
  getTranslations with a include_canonical flag.
  [hannosch]

- Optimized the getCanonical method to avoid two identical reference catalog